test/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    WS

Grammar

Rule 0     S' -> lines
Rule 1     lines -> line
Rule 2     lines -> line lines
Rule 3     line -> hostname_line NL
Rule 4     line -> policy_line NL
Rule 5     line -> policy_id_line NL
Rule 6     line -> words NL
Rule 7     line -> policy_context_line NL
Rule 8     line -> address_line NL
Rule 9     line -> service_line NL
Rule 10    line -> group_line NL
Rule 11    line -> interface_line NL
Rule 12    line -> route_line NL
Rule 13    line -> EXIT NL
Rule 14    line -> NL
Rule 15    line -> error NL
Rule 16    empty -> <empty>
Rule 17    items -> item items
Rule 18    items -> item
Rule 19    item -> WORD
Rule 20    item -> NUMBER
Rule 21    words -> WORD
Rule 22    words -> WORD words
Rule 23    object_name -> WORD
Rule 24    hostname_line -> SET HOSTNAME words
Rule 25    address_line -> SET ADDRESS WORD object_name WORD
Rule 26    address_line -> SET ADDRESS WORD object_name WORD words
Rule 27    address_line -> SET ADDRESS WORD object_name IP_ADDR opt_slash IP_ADDR
Rule 28    address_line -> SET ADDRESS WORD object_name IP_ADDR opt_slash IP_ADDR words
Rule 29    address_line -> SET ADDRESS WORD object_name IP_ADDR opt_slash NUMBER
Rule 30    address_line -> SET ADDRESS WORD object_name IP_ADDR opt_slash NUMBER words
Rule 31    opt_slash -> SLASH
Rule 32    opt_slash -> empty
Rule 33    service_line -> SET SERVICE object_name service_plus
Rule 34    service_line -> SET SERVICE object_name service_protocol
Rule 35    service_line -> SET SERVICE WORD TIMEOUT items
Rule 36    service_line -> SET SERVICE WORD TIMEOUT NEVER
Rule 37    service_line -> SET SERVICE WORD SESSION_CACHE
Rule 38    service_plus -> PLUS ICMP TYPE NUMBER CODE NUMBER
Rule 39    service_plus -> PLUS protocol SRC_PORT NUMBER HYPHEN NUMBER DST_PORT NUMBER HYPHEN NUMBER
Rule 40    service_plus -> PLUS WORD items
Rule 41    service_protocol -> PROTOCOL protocol opt_protocol_src opt_protocol_dst
Rule 42    service_protocol -> PROTOCOL ICMP TYPE NUMBER CODE NUMBER
Rule 43    service_protocol -> PROTOCOL WORD items
Rule 44    opt_protocol_src -> SRC_PORT NUMBER HYPHEN NUMBER
Rule 45    opt_protocol_src -> empty
Rule 46    opt_protocol_dst -> DST_PORT NUMBER HYPHEN NUMBER
Rule 47    opt_protocol_dst -> DST_PORT NUMBER HYPHEN NUMBER TIMEOUT NUMBER
Rule 48    opt_protocol_dst -> DST_PORT NUMBER HYPHEN NUMBER TIMEOUT NEVER
Rule 49    opt_protocol_dst -> empty
Rule 50    protocol -> TCP
Rule 51    protocol -> UDP
Rule 52    protocol -> NUMBER
Rule 53    group_line -> SET GROUP ADDRESS item object_name opt_group_add opt_group_comment opt_hidden
Rule 54    group_line -> SET GROUP SERVICE object_name opt_group_add opt_group_comment opt_hidden
Rule 55    opt_group_add -> ADD object_name
Rule 56    opt_group_add -> empty
Rule 57    opt_group_comment -> COMMENT items
Rule 58    opt_group_comment -> empty
Rule 59    opt_hidden -> HIDDEN
Rule 60    opt_hidden -> empty
Rule 61    interface_line -> SET INTERFACE object_name IP IP_ADDR SLASH NUMBER
Rule 62    interface_line -> SET INTERFACE object_name IP IP_ADDR SLASH NUMBER SECONDARY
Rule 63    interface_line -> SET INTERFACE object_name opt_tag ZONE object_name
Rule 64    opt_tag -> TAG NUMBER
Rule 65    opt_tag -> empty
Rule 66    policy_line -> SET POLICY opt_global opt_id opt_position opt_name opt_zone rules opt_nat action options
Rule 67    policy_line -> SET POLICY MOVE NUMBER BEFORE NUMBER
Rule 68    policy_line -> SET POLICY MOVE NUMBER AFTER NUMBER
Rule 69    policy_line -> SET POLICY DEFAULT_PERMIT_ALL
Rule 70    policy_line -> UNSET POLICY DEFAULT_PERMIT_ALL
Rule 71    opt_global -> GLOBAL
Rule 72    opt_global -> empty
Rule 73    opt_id -> ID NUMBER
Rule 74    opt_id -> empty
Rule 75    opt_position -> TOP
Rule 76    opt_position -> BEFORE NUMBER
Rule 77    opt_position -> empty
Rule 78    opt_name -> NAME object_name
Rule 79    opt_name -> empty
Rule 80    opt_zone -> FROM object_name TO item
Rule 81    opt_zone -> empty
Rule 82    rules -> src_addr dst_addr svc_name
Rule 83    src_addr -> object_name
Rule 84    src_addr -> ANY
Rule 85    dst_addr -> object_name
Rule 86    dst_addr -> ANY
Rule 87    svc_name -> object_name
Rule 88    svc_name -> ANY
Rule 89    opt_nat -> NAT opt_src_nat opt_dst_nat
Rule 90    opt_nat -> empty
Rule 91    opt_src_nat -> SRC
Rule 92    opt_src_nat -> SRC DIP_ID NUMBER
Rule 93    opt_src_nat -> empty
Rule 94    opt_dst_nat -> DST IP IP_ADDR
Rule 95    opt_dst_nat -> DST IP IP_ADDR IP_ADDR
Rule 96    opt_dst_nat -> DST IP IP_ADDR PORT item
Rule 97    opt_dst_nat -> empty
Rule 98    action -> DENY
Rule 99    action -> REJECT
Rule 100   action -> PERMIT
Rule 101   action -> tunnel
Rule 102   tunnel -> TUNNEL L2TP item
Rule 103   tunnel -> TUNNEL VPN_GROUP item
Rule 104   tunnel -> TUNNEL VPN item
Rule 105   tunnel -> TUNNEL VPN item L2TP item
Rule 106   tunnel -> TUNNEL VPN item PAIR_POLICY item
Rule 107   options -> option options
Rule 108   options -> empty
Rule 109   option -> WORD
Rule 110   option -> NUMBER
Rule 111   option -> DISABLE
Rule 112   option -> ATTACK
Rule 113   option -> AV
Rule 114   option -> ZONE
Rule 115   option -> TIMEOUT
Rule 116   policy_id_line -> SET POLICY opt_global ID NUMBER
Rule 117   policy_id_line -> SET POLICY opt_global ID NUMBER APPLICATION options
Rule 118   policy_id_line -> SET POLICY opt_global ID NUMBER ATTACK options
Rule 119   policy_id_line -> SET POLICY opt_global ID NUMBER AV options
Rule 120   policy_id_line -> SET POLICY opt_global ID NUMBER DISABLE
Rule 121   policy_context_line -> SET DST_ADDRESS object_name
Rule 122   policy_context_line -> SET DST_ADDRESS NEGATE
Rule 123   policy_context_line -> SET SRC_ADDRESS object_name
Rule 124   policy_context_line -> SET SRC_ADDRESS NEGATE
Rule 125   policy_context_line -> SET SERVICE object_name
Rule 126   policy_context_line -> SET items
Rule 127   route_line -> SET ROUTE IP_ADDR SLASH NUMBER INTERFACE WORD GATEWAY IP_ADDR
Rule 128   route_line -> SET ROUTE IP_ADDR SLASH NUMBER INTERFACE WORD GATEWAY IP_ADDR PREFERENCE NUMBER

Terminals, with rules where they appear

ADD                  : 55
ADDRESS              : 25 26 27 28 29 30 53
AFTER                : 68
ANY                  : 84 86 88
APPLICATION          : 117
ATTACK               : 112 118
AV                   : 113 119
BEFORE               : 67 76
CODE                 : 38 42
COMMENT              : 57
DEFAULT_PERMIT_ALL   : 69 70
DENY                 : 98
DIP_ID               : 92
DISABLE              : 111 120
DST                  : 94 95 96
DST_ADDRESS          : 121 122
DST_PORT             : 39 46 47 48
EXIT                 : 13
FROM                 : 80
GATEWAY              : 127 128
GLOBAL               : 71
GROUP                : 53 54
HIDDEN               : 59
HOSTNAME             : 24
HYPHEN               : 39 39 44 46 47 48
ICMP                 : 38 42
ID                   : 73 116 117 118 119 120
INTERFACE            : 61 62 63 127 128
IP                   : 61 62 94 95 96
IP_ADDR              : 27 27 28 28 29 30 61 62 94 95 95 96 127 127 128 128
L2TP                 : 102 105
MOVE                 : 67 68
NAME                 : 78
NAT                  : 89
NEGATE               : 122 124
NEVER                : 36 48
NL                   : 3 4 5 6 7 8 9 10 11 12 13 14 15
NUMBER               : 20 29 30 38 38 39 39 39 39 42 42 44 44 46 46 47 47 47 48 48 52 61 62 64 67 67 68 68 73 76 92 110 116 117 118 119 120 127 128 128
PAIR_POLICY          : 106
PERMIT               : 100
PLUS                 : 38 39 40
POLICY               : 66 67 68 69 70 116 117 118 119 120
PORT                 : 96
PREFERENCE           : 128
PROTOCOL             : 41 42 43
REJECT               : 99
ROUTE                : 127 128
SECONDARY            : 62
SERVICE              : 33 34 35 36 37 54 125
SESSION_CACHE        : 37
SET                  : 24 25 26 27 28 29 30 33 34 35 36 37 53 54 61 62 63 66 67 68 69 116 117 118 119 120 121 122 123 124 125 126 127 128
SLASH                : 31 61 62 127 128
SRC                  : 91 92
SRC_ADDRESS          : 123 124
SRC_PORT             : 39 44
TAG                  : 64
TCP                  : 50
TIMEOUT              : 35 36 47 48 115
TO                   : 80
TOP                  : 75
TUNNEL               : 102 103 104 105 106
TYPE                 : 38 42
UDP                  : 51
UNSET                : 70
VPN                  : 104 105 106
VPN_GROUP            : 103
WORD                 : 19 21 22 23 25 25 26 26 27 28 29 30 35 36 37 40 43 109 127 128
WS                   : 
ZONE                 : 63 114
error                : 15

Nonterminals, with rules where they appear

action               : 66
address_line         : 8
dst_addr             : 82
empty                : 32 45 49 56 58 60 65 72 74 77 79 81 90 93 97 108
group_line           : 10
hostname_line        : 3
interface_line       : 11
item                 : 17 18 53 80 96 102 103 104 105 105 106 106
items                : 17 35 40 43 57 126
line                 : 1 2
lines                : 2 0
object_name          : 25 26 27 28 29 30 33 34 53 54 55 61 62 63 63 78 80 83 85 87 121 123 125
opt_dst_nat          : 89
opt_global           : 66 116 117 118 119 120
opt_group_add        : 53 54
opt_group_comment    : 53 54
opt_hidden           : 53 54
opt_id               : 66
opt_name             : 66
opt_nat              : 66
opt_position         : 66
opt_protocol_dst     : 41
opt_protocol_src     : 41
opt_slash            : 27 28 29 30
opt_src_nat          : 89
opt_tag              : 63
opt_zone             : 66
option               : 107
options              : 66 107 117 118 119
policy_context_line  : 7
policy_id_line       : 5
policy_line          : 4
protocol             : 39 41
route_line           : 12
rules                : 66
service_line         : 9
service_plus         : 33
service_protocol     : 34
src_addr             : 82
svc_name             : 82
tunnel               : 101
words                : 6 22 24 26 28 30

Parsing method: LALR

state 0

    (0) S' -> . lines
    (1) lines -> . line
    (2) lines -> . line lines
    (3) line -> . hostname_line NL
    (4) line -> . policy_line NL
    (5) line -> . policy_id_line NL
    (6) line -> . words NL
    (7) line -> . policy_context_line NL
    (8) line -> . address_line NL
    (9) line -> . service_line NL
    (10) line -> . group_line NL
    (11) line -> . interface_line NL
    (12) line -> . route_line NL
    (13) line -> . EXIT NL
    (14) line -> . NL
    (15) line -> . error NL
    (24) hostname_line -> . SET HOSTNAME words
    (66) policy_line -> . SET POLICY opt_global opt_id opt_position opt_name opt_zone rules opt_nat action options
    (67) policy_line -> . SET POLICY MOVE NUMBER BEFORE NUMBER
    (68) policy_line -> . SET POLICY MOVE NUMBER AFTER NUMBER
    (69) policy_line -> . SET POLICY DEFAULT_PERMIT_ALL
    (70) policy_line -> . UNSET POLICY DEFAULT_PERMIT_ALL
    (116) policy_id_line -> . SET POLICY opt_global ID NUMBER
    (117) policy_id_line -> . SET POLICY opt_global ID NUMBER APPLICATION options
    (118) policy_id_line -> . SET POLICY opt_global ID NUMBER ATTACK options
    (119) policy_id_line -> . SET POLICY opt_global ID NUMBER AV options
    (120) policy_id_line -> . SET POLICY opt_global ID NUMBER DISABLE
    (21) words -> . WORD
    (22) words -> . WORD words
    (121) policy_context_line -> . SET DST_ADDRESS object_name
    (122) policy_context_line -> . SET DST_ADDRESS NEGATE
    (123) policy_context_line -> . SET SRC_ADDRESS object_name
    (124) policy_context_line -> . SET SRC_ADDRESS NEGATE
    (125) policy_context_line -> . SET SERVICE object_name
    (126) policy_context_line -> . SET items
    (25) address_line -> . SET ADDRESS WORD object_name WORD
    (26) address_line -> . SET ADDRESS WORD object_name WORD words
    (27) address_line -> . SET ADDRESS WORD object_name IP_ADDR opt_slash IP_ADDR
    (28) address_line -> . SET ADDRESS WORD object_name IP_ADDR opt_slash IP_ADDR words
    (29) address_line -> . SET ADDRESS WORD object_name IP_ADDR opt_slash NUMBER
    (30) address_line -> . SET ADDRESS WORD object_name IP_ADDR opt_slash NUMBER words
    (33) service_line -> . SET SERVICE object_name service_plus
    (34) service_line -> . SET SERVICE object_name service_protocol
    (35) service_line -> . SET SERVICE WORD TIMEOUT items
    (36) service_line -> . SET SERVICE WORD TIMEOUT NEVER
    (37) service_line -> . SET SERVICE WORD SESSION_CACHE
    (53) group_line -> . SET GROUP ADDRESS item object_name opt_group_add opt_group_comment opt_hidden
    (54) group_line -> . SET GROUP SERVICE object_name opt_group_add opt_group_comment opt_hidden
    (61) interface_line -> . SET INTERFACE object_name IP IP_ADDR SLASH NUMBER
    (62) interface_line -> . SET INTERFACE object_name IP IP_ADDR SLASH NUMBER SECONDARY
    (63) interface_line -> . SET INTERFACE object_name opt_tag ZONE object_name
    (127) route_line -> . SET ROUTE IP_ADDR SLASH NUMBER INTERFACE WORD GATEWAY IP_ADDR
    (128) route_line -> . SET ROUTE IP_ADDR SLASH NUMBER INTERFACE WORD GATEWAY IP_ADDR PREFERENCE NUMBER

    EXIT            shift and go to state 14
    NL              shift and go to state 4
    error           shift and go to state 15
    SET             shift and go to state 3
    UNSET           shift and go to state 2
    WORD            shift and go to state 11

    hostname_line                  shift and go to state 1
    route_line                     shift and go to state 5
    policy_line                    shift and go to state 6
    group_line                     shift and go to state 7
    service_line                   shift and go to state 8
    policy_context_line            shift and go to state 16
    words                          shift and go to state 9
    policy_id_line                 shift and go to state 10
    line                           shift and go to state 12
    lines                          shift and go to state 13
    address_line                   shift and go to state 17
    interface_line                 shift and go to state 18

state 1

    (3) line -> hostname_line . NL

    NL              shift and go to state 19


state 2

    (70) policy_line -> UNSET . POLICY DEFAULT_PERMIT_ALL

    POLICY          shift and go to state 20


state 3

    (24) hostname_line -> SET . HOSTNAME words
    (66) policy_line -> SET . POLICY opt_global opt_id opt_position opt_name opt_zone rules opt_nat action options
    (67) policy_line -> SET . POLICY MOVE NUMBER BEFORE NUMBER
    (68) policy_line -> SET . POLICY MOVE NUMBER AFTER NUMBER
    (69) policy_line -> SET . POLICY DEFAULT_PERMIT_ALL
    (116) policy_id_line -> SET . POLICY opt_global ID NUMBER
    (117) policy_id_line -> SET . POLICY opt_global ID NUMBER APPLICATION options
    (118) policy_id_line -> SET . POLICY opt_global ID NUMBER ATTACK options
    (119) policy_id_line -> SET . POLICY opt_global ID NUMBER AV options
    (120) policy_id_line -> SET . POLICY opt_global ID NUMBER DISABLE
    (121) policy_context_line -> SET . DST_ADDRESS object_name
    (122) policy_context_line -> SET . DST_ADDRESS NEGATE
    (123) policy_context_line -> SET . SRC_ADDRESS object_name
    (124) policy_context_line -> SET . SRC_ADDRESS NEGATE
    (125) policy_context_line -> SET . SERVICE object_name
    (126) policy_context_line -> SET . items
    (25) address_line -> SET . ADDRESS WORD object_name WORD
    (26) address_line -> SET . ADDRESS WORD object_name WORD words
    (27) address_line -> SET . ADDRESS WORD object_name IP_ADDR opt_slash IP_ADDR
    (28) address_line -> SET . ADDRESS WORD object_name IP_ADDR opt_slash IP_ADDR words
    (29) address_line -> SET . ADDRESS WORD object_name IP_ADDR opt_slash NUMBER
    (30) address_line -> SET . ADDRESS WORD object_name IP_ADDR opt_slash NUMBER words
    (33) service_line -> SET . SERVICE object_name service_plus
    (34) service_line -> SET . SERVICE object_name service_protocol
    (35) service_line -> SET . SERVICE WORD TIMEOUT items
    (36) service_line -> SET . SERVICE WORD TIMEOUT NEVER
    (37) service_line -> SET . SERVICE WORD SESSION_CACHE
    (53) group_line -> SET . GROUP ADDRESS item object_name opt_group_add opt_group_comment opt_hidden
    (54) group_line -> SET . GROUP SERVICE object_name opt_group_add opt_group_comment opt_hidden
    (61) interface_line -> SET . INTERFACE object_name IP IP_ADDR SLASH NUMBER
    (62) interface_line -> SET . INTERFACE object_name IP IP_ADDR SLASH NUMBER SECONDARY
    (63) interface_line -> SET . INTERFACE object_name opt_tag ZONE object_name
    (127) route_line -> SET . ROUTE IP_ADDR SLASH NUMBER INTERFACE WORD GATEWAY IP_ADDR
    (128) route_line -> SET . ROUTE IP_ADDR SLASH NUMBER INTERFACE WORD GATEWAY IP_ADDR PREFERENCE NUMBER
    (17) items -> . item items
    (18) items -> . item
    (19) item -> . WORD
    (20) item -> . NUMBER

    HOSTNAME        shift and go to state 31
    POLICY          shift and go to state 28
    DST_ADDRESS     shift and go to state 27
    SRC_ADDRESS     shift and go to state 23
    SERVICE         shift and go to state 22
    ADDRESS         shift and go to state 33
    GROUP           shift and go to state 21
    INTERFACE       shift and go to state 29
    ROUTE           shift and go to state 24
    WORD            shift and go to state 26
    NUMBER          shift and go to state 25

    item                           shift and go to state 32
    items                          shift and go to state 30

state 4

    (14) line -> NL .

    EXIT            reduce using rule 14 (line -> NL .)
    NL              reduce using rule 14 (line -> NL .)
    error           reduce using rule 14 (line -> NL .)
    SET             reduce using rule 14 (line -> NL .)
    UNSET           reduce using rule 14 (line -> NL .)
    WORD            reduce using rule 14 (line -> NL .)
    $end            reduce using rule 14 (line -> NL .)


state 5

    (12) line -> route_line . NL

    NL              shift and go to state 34


state 6

    (4) line -> policy_line . NL

    NL              shift and go to state 35


state 7

    (10) line -> group_line . NL

    NL              shift and go to state 36


state 8

    (9) line -> service_line . NL

    NL              shift and go to state 37


state 9

    (6) line -> words . NL

    NL              shift and go to state 38


state 10

    (5) line -> policy_id_line . NL

    NL              shift and go to state 39


state 11

    (21) words -> WORD .
    (22) words -> WORD . words
    (21) words -> . WORD
    (22) words -> . WORD words

    NL              reduce using rule 21 (words -> WORD .)
    WORD            shift and go to state 11

    words                          shift and go to state 40

state 12

    (1) lines -> line .
    (2) lines -> line . lines
    (1) lines -> . line
    (2) lines -> . line lines
    (3) line -> . hostname_line NL
    (4) line -> . policy_line NL
    (5) line -> . policy_id_line NL
    (6) line -> . words NL
    (7) line -> . policy_context_line NL
    (8) line -> . address_line NL
    (9) line -> . service_line NL
    (10) line -> . group_line NL
    (11) line -> . interface_line NL
    (12) line -> . route_line NL
    (13) line -> . EXIT NL
    (14) line -> . NL
    (15) line -> . error NL
    (24) hostname_line -> . SET HOSTNAME words
    (66) policy_line -> . SET POLICY opt_global opt_id opt_position opt_name opt_zone rules opt_nat action options
    (67) policy_line -> . SET POLICY MOVE NUMBER BEFORE NUMBER
    (68) policy_line -> . SET POLICY MOVE NUMBER AFTER NUMBER
    (69) policy_line -> . SET POLICY DEFAULT_PERMIT_ALL
    (70) policy_line -> . UNSET POLICY DEFAULT_PERMIT_ALL
    (116) policy_id_line -> . SET POLICY opt_global ID NUMBER
    (117) policy_id_line -> . SET POLICY opt_global ID NUMBER APPLICATION options
    (118) policy_id_line -> . SET POLICY opt_global ID NUMBER ATTACK options
    (119) policy_id_line -> . SET POLICY opt_global ID NUMBER AV options
    (120) policy_id_line -> . SET POLICY opt_global ID NUMBER DISABLE
    (21) words -> . WORD
    (22) words -> . WORD words
    (121) policy_context_line -> . SET DST_ADDRESS object_name
    (122) policy_context_line -> . SET DST_ADDRESS NEGATE
    (123) policy_context_line -> . SET SRC_ADDRESS object_name
    (124) policy_context_line -> . SET SRC_ADDRESS NEGATE
    (125) policy_context_line -> . SET SERVICE object_name
    (126) policy_context_line -> . SET items
    (25) address_line -> . SET ADDRESS WORD object_name WORD
    (26) address_line -> . SET ADDRESS WORD object_name WORD words
    (27) address_line -> . SET ADDRESS WORD object_name IP_ADDR opt_slash IP_ADDR
    (28) address_line -> . SET ADDRESS WORD object_name IP_ADDR opt_slash IP_ADDR words
    (29) address_line -> . SET ADDRESS WORD object_name IP_ADDR opt_slash NUMBER
    (30) address_line -> . SET ADDRESS WORD object_name IP_ADDR opt_slash NUMBER words
    (33) service_line -> . SET SERVICE object_name service_plus
    (34) service_line -> . SET SERVICE object_name service_protocol
    (35) service_line -> . SET SERVICE WORD TIMEOUT items
    (36) service_line -> . SET SERVICE WORD TIMEOUT NEVER
    (37) service_line -> . SET SERVICE WORD SESSION_CACHE
    (53) group_line -> . SET GROUP ADDRESS item object_name opt_group_add opt_group_comment opt_hidden
    (54) group_line -> . SET GROUP SERVICE object_name opt_group_add opt_group_comment opt_hidden
    (61) interface_line -> . SET INTERFACE object_name IP IP_ADDR SLASH NUMBER
    (62) interface_line -> . SET INTERFACE object_name IP IP_ADDR SLASH NUMBER SECONDARY
    (63) interface_line -> . SET INTERFACE object_name opt_tag ZONE object_name
    (127) route_line -> . SET ROUTE IP_ADDR SLASH NUMBER INTERFACE WORD GATEWAY IP_ADDR
    (128) route_line -> . SET ROUTE IP_ADDR SLASH NUMBER INTERFACE WORD GATEWAY IP_ADDR PREFERENCE NUMBER

    $end            reduce using rule 1 (lines -> line .)
    EXIT            shift and go to state 14
    NL              shift and go to state 4
    error           shift and go to state 15
    SET             shift and go to state 3
    UNSET           shift and go to state 2
    WORD            shift and go to state 11

    hostname_line                  shift and go to state 1
    route_line                     shift and go to state 5
    policy_line                    shift and go to state 6
    group_line                     shift and go to state 7
    service_line                   shift and go to state 8
    policy_context_line            shift and go to state 16
    words                          shift and go to state 9
    policy_id_line                 shift and go to state 10
    line                           shift and go to state 12
    lines                          shift and go to state 41
    address_line                   shift and go to state 17
    interface_line                 shift and go to state 18

state 13

    (0) S' -> lines .



state 14

    (13) line -> EXIT . NL

    NL              shift and go to state 42


state 15

    (15) line -> error . NL

    NL              shift and go to state 43


state 16

    (7) line -> policy_context_line . NL

    NL              shift and go to state 44


state 17

    (8) line -> address_line . NL

    NL              shift and go to state 45


state 18

    (11) line -> interface_line . NL

    NL              shift and go to state 46


state 19

    (3) line -> hostname_line NL .

    EXIT            reduce using rule 3 (line -> hostname_line NL .)
    NL              reduce using rule 3 (line -> hostname_line NL .)
    error           reduce using rule 3 (line -> hostname_line NL .)
    SET             reduce using rule 3 (line -> hostname_line NL .)
    UNSET           reduce using rule 3 (line -> hostname_line NL .)
    WORD            reduce using rule 3 (line -> hostname_line NL .)
    $end            reduce using rule 3 (line -> hostname_line NL .)


state 20

    (70) policy_line -> UNSET POLICY . DEFAULT_PERMIT_ALL

    DEFAULT_PERMIT_ALL shift and go to state 47


state 21

    (53) group_line -> SET GROUP . ADDRESS item object_name opt_group_add opt_group_comment opt_hidden
    (54) group_line -> SET GROUP . SERVICE object_name opt_group_add opt_group_comment opt_hidden

    ADDRESS         shift and go to state 49
    SERVICE         shift and go to state 48


state 22

    (125) policy_context_line -> SET SERVICE . object_name
    (33) service_line -> SET SERVICE . object_name service_plus
    (34) service_line -> SET SERVICE . object_name service_protocol
    (35) service_line -> SET SERVICE . WORD TIMEOUT items
    (36) service_line -> SET SERVICE . WORD TIMEOUT NEVER
    (37) service_line -> SET SERVICE . WORD SESSION_CACHE
    (23) object_name -> . WORD

    WORD            shift and go to state 50

    object_name                    shift and go to state 51

state 23

    (123) policy_context_line -> SET SRC_ADDRESS . object_name
    (124) policy_context_line -> SET SRC_ADDRESS . NEGATE
    (23) object_name -> . WORD

    NEGATE          shift and go to state 52
    WORD            shift and go to state 54

    object_name                    shift and go to state 53

state 24

    (127) route_line -> SET ROUTE . IP_ADDR SLASH NUMBER INTERFACE WORD GATEWAY IP_ADDR
    (128) route_line -> SET ROUTE . IP_ADDR SLASH NUMBER INTERFACE WORD GATEWAY IP_ADDR PREFERENCE NUMBER

    IP_ADDR         shift and go to state 55


state 25

    (20) item -> NUMBER .

    WORD            reduce using rule 20 (item -> NUMBER .)
    NUMBER          reduce using rule 20 (item -> NUMBER .)
    NL              reduce using rule 20 (item -> NUMBER .)
    HIDDEN          reduce using rule 20 (item -> NUMBER .)
    L2TP            reduce using rule 20 (item -> NUMBER .)
    PAIR_POLICY     reduce using rule 20 (item -> NUMBER .)
    DISABLE         reduce using rule 20 (item -> NUMBER .)
    ATTACK          reduce using rule 20 (item -> NUMBER .)
    AV              reduce using rule 20 (item -> NUMBER .)
    ZONE            reduce using rule 20 (item -> NUMBER .)
    TIMEOUT         reduce using rule 20 (item -> NUMBER .)
    DENY            reduce using rule 20 (item -> NUMBER .)
    REJECT          reduce using rule 20 (item -> NUMBER .)
    PERMIT          reduce using rule 20 (item -> NUMBER .)
    TUNNEL          reduce using rule 20 (item -> NUMBER .)
    ANY             reduce using rule 20 (item -> NUMBER .)


state 26

    (19) item -> WORD .

    WORD            reduce using rule 19 (item -> WORD .)
    NUMBER          reduce using rule 19 (item -> WORD .)
    NL              reduce using rule 19 (item -> WORD .)
    HIDDEN          reduce using rule 19 (item -> WORD .)
    L2TP            reduce using rule 19 (item -> WORD .)
    PAIR_POLICY     reduce using rule 19 (item -> WORD .)
    DISABLE         reduce using rule 19 (item -> WORD .)
    ATTACK          reduce using rule 19 (item -> WORD .)
    AV              reduce using rule 19 (item -> WORD .)
    ZONE            reduce using rule 19 (item -> WORD .)
    TIMEOUT         reduce using rule 19 (item -> WORD .)
    DENY            reduce using rule 19 (item -> WORD .)
    REJECT          reduce using rule 19 (item -> WORD .)
    PERMIT          reduce using rule 19 (item -> WORD .)
    TUNNEL          reduce using rule 19 (item -> WORD .)
    ANY             reduce using rule 19 (item -> WORD .)


state 27

    (121) policy_context_line -> SET DST_ADDRESS . object_name
    (122) policy_context_line -> SET DST_ADDRESS . NEGATE
    (23) object_name -> . WORD

    NEGATE          shift and go to state 56
    WORD            shift and go to state 54

    object_name                    shift and go to state 57

state 28

    (66) policy_line -> SET POLICY . opt_global opt_id opt_position opt_name opt_zone rules opt_nat action options
    (67) policy_line -> SET POLICY . MOVE NUMBER BEFORE NUMBER
    (68) policy_line -> SET POLICY . MOVE NUMBER AFTER NUMBER
    (69) policy_line -> SET POLICY . DEFAULT_PERMIT_ALL
    (116) policy_id_line -> SET POLICY . opt_global ID NUMBER
    (117) policy_id_line -> SET POLICY . opt_global ID NUMBER APPLICATION options
    (118) policy_id_line -> SET POLICY . opt_global ID NUMBER ATTACK options
    (119) policy_id_line -> SET POLICY . opt_global ID NUMBER AV options
    (120) policy_id_line -> SET POLICY . opt_global ID NUMBER DISABLE
    (71) opt_global -> . GLOBAL
    (72) opt_global -> . empty
    (16) empty -> .

    MOVE            shift and go to state 58
    DEFAULT_PERMIT_ALL shift and go to state 61
    GLOBAL          shift and go to state 60
    ID              reduce using rule 16 (empty -> .)
    TOP             reduce using rule 16 (empty -> .)
    BEFORE          reduce using rule 16 (empty -> .)
    NAME            reduce using rule 16 (empty -> .)
    FROM            reduce using rule 16 (empty -> .)
    ANY             reduce using rule 16 (empty -> .)
    WORD            reduce using rule 16 (empty -> .)

    opt_global                     shift and go to state 62
    empty                          shift and go to state 59

state 29

    (61) interface_line -> SET INTERFACE . object_name IP IP_ADDR SLASH NUMBER
    (62) interface_line -> SET INTERFACE . object_name IP IP_ADDR SLASH NUMBER SECONDARY
    (63) interface_line -> SET INTERFACE . object_name opt_tag ZONE object_name
    (23) object_name -> . WORD

    WORD            shift and go to state 54

    object_name                    shift and go to state 63

state 30

    (126) policy_context_line -> SET items .

    NL              reduce using rule 126 (policy_context_line -> SET items .)


state 31

    (24) hostname_line -> SET HOSTNAME . words
    (21) words -> . WORD
    (22) words -> . WORD words

    WORD            shift and go to state 11

    words                          shift and go to state 64

state 32

    (17) items -> item . items
    (18) items -> item .
    (17) items -> . item items
    (18) items -> . item
    (19) item -> . WORD
    (20) item -> . NUMBER

    HIDDEN          reduce using rule 18 (items -> item .)
    NL              reduce using rule 18 (items -> item .)
    WORD            shift and go to state 26
    NUMBER          shift and go to state 25

    item                           shift and go to state 32
    items                          shift and go to state 65

state 33

    (25) address_line -> SET ADDRESS . WORD object_name WORD
    (26) address_line -> SET ADDRESS . WORD object_name WORD words
    (27) address_line -> SET ADDRESS . WORD object_name IP_ADDR opt_slash IP_ADDR
    (28) address_line -> SET ADDRESS . WORD object_name IP_ADDR opt_slash IP_ADDR words
    (29) address_line -> SET ADDRESS . WORD object_name IP_ADDR opt_slash NUMBER
    (30) address_line -> SET ADDRESS . WORD object_name IP_ADDR opt_slash NUMBER words

    WORD            shift and go to state 66


state 34

    (12) line -> route_line NL .

    EXIT            reduce using rule 12 (line -> route_line NL .)
    NL              reduce using rule 12 (line -> route_line NL .)
    error           reduce using rule 12 (line -> route_line NL .)
    SET             reduce using rule 12 (line -> route_line NL .)
    UNSET           reduce using rule 12 (line -> route_line NL .)
    WORD            reduce using rule 12 (line -> route_line NL .)
    $end            reduce using rule 12 (line -> route_line NL .)


state 35

    (4) line -> policy_line NL .

    EXIT            reduce using rule 4 (line -> policy_line NL .)
    NL              reduce using rule 4 (line -> policy_line NL .)
    error           reduce using rule 4 (line -> policy_line NL .)
    SET             reduce using rule 4 (line -> policy_line NL .)
    UNSET           reduce using rule 4 (line -> policy_line NL .)
    WORD            reduce using rule 4 (line -> policy_line NL .)
    $end            reduce using rule 4 (line -> policy_line NL .)


state 36

    (10) line -> group_line NL .

    EXIT            reduce using rule 10 (line -> group_line NL .)
    NL              reduce using rule 10 (line -> group_line NL .)
    error           reduce using rule 10 (line -> group_line NL .)
    SET             reduce using rule 10 (line -> group_line NL .)
    UNSET           reduce using rule 10 (line -> group_line NL .)
    WORD            reduce using rule 10 (line -> group_line NL .)
    $end            reduce using rule 10 (line -> group_line NL .)


state 37

    (9) line -> service_line NL .

    EXIT            reduce using rule 9 (line -> service_line NL .)
    NL              reduce using rule 9 (line -> service_line NL .)
    error           reduce using rule 9 (line -> service_line NL .)
    SET             reduce using rule 9 (line -> service_line NL .)
    UNSET           reduce using rule 9 (line -> service_line NL .)
    WORD            reduce using rule 9 (line -> service_line NL .)
    $end            reduce using rule 9 (line -> service_line NL .)


state 38

    (6) line -> words NL .

    EXIT            reduce using rule 6 (line -> words NL .)
    NL              reduce using rule 6 (line -> words NL .)
    error           reduce using rule 6 (line -> words NL .)
    SET             reduce using rule 6 (line -> words NL .)
    UNSET           reduce using rule 6 (line -> words NL .)
    WORD            reduce using rule 6 (line -> words NL .)
    $end            reduce using rule 6 (line -> words NL .)


state 39

    (5) line -> policy_id_line NL .
